# ocaml_learning

./: README.md  dune-project  ocaml_learning.opam
.github/workflows/: ci.yaml
lib/: dune  ocaml_learning.ml
test/: dune
